Fixed layout bug where clicking the dropdown on the right side didn't work

--- a/LiveOurLives/mainsite/static/mainsite/style.css
+++ b/LiveOurLives/mainsite/static/mainsite/style.css
@@ -215,3 +215,7 @@ footer{
 .voidspace{
     height: 20rem;
 }
+
+.minimizer-dropdown{
+    z-index: 2;
+}
